<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lower_section_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_st_info_details"
                android:layout_marginTop="@dimen/margin_top_info_details"
                android:text="@string/title_add_info_details"
                android:textSize="@dimen/txtsize_info_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_age_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_age_info_details"
                android:layout_marginStart="@dimen/margin_st_age_info_details"
                android:layout_marginTop="@dimen/margin_top_age_info_details"
                android:text="@string/title_age_info_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txtsize_age_info_details"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/details_height_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_info" />

            <TextView
                android:id="@+id/details_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_age_info_details"
                android:layout_marginStart="@dimen/margin_st_age_info_details"
                android:text="@string/title_age_info_details"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/details_height_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_age_placeholder" />

            <TextView
                android:id="@+id/details_height_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_height_info_details"
                android:layout_marginStart="@dimen/margin_st_height_info_details"
                android:layout_marginTop="@dimen/margin_top_height_info_details"
                android:text="@string/title_height_info_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txtsize_height_info_details"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_info" />

            <TextView
                android:id="@+id/details_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_height_info_details"
                android:layout_marginStart="@dimen/margin_st_height_info_details"
                android:text="@string/title_height_info_details"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_height_placeholder" />

            <TextView
                android:id="@+id/details_gender_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_gender_info_details"
                android:layout_marginStart="@dimen/margin_st_gender_info_details"
                android:layout_marginTop="@dimen/margin_top_gender_info_details"
                android:text="@string/title_gender_info_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txtsize_gender_info_details"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/details_height_placeholder"
                app:layout_constraintTop_toBottomOf="@+id/label_info" />

            <TextView
                android:id="@+id/details_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_gender_info_details"
                android:layout_marginStart="@dimen/margin_st_text_gender_details_info"
                android:text="@string/title_gender_info_details"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/details_height"
                app:layout_constraintTop_toBottomOf="@+id/details_gender_placeholder" />

            <View
                android:id="@+id/first_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:layout_marginTop="@dimen/margin_top_divider"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_height" />

            <TextView
                android:id="@+id/label_interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_st_lab_interests"
                android:layout_marginTop="@dimen/margin_top_lab_interests"
                android:text="@string/title_interests_info_details"
                android:textSize="@dimen/txtsize_lab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_divider" />

            <TextView
                android:id="@+id/details_color_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_st_color_info_details"
                android:layout_marginTop="@dimen/margin_top_color_info_details"
                android:text="@string/title_color_info_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txtsize_color_info_details"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_interests" />

            <TextView
                android:id="@+id/details_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_st_color_info_details"
                android:text="@string/title_color_info_details"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_color_placeholder" />

            <TextView
                android:id="@+id/details_food_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_food_info_details"
                android:layout_marginTop="@dimen/margin_top_food_info_details"
                android:text="@string/title_food_info_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txtsize_food_info_details"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_interests" />

            <TextView
                android:id="@+id/details_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_food_info_details"
                android:text="@string/title_food_info_details"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_food_placeholder" />
        </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>