<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_appbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/details_pic"
                    android:layout_width="@dimen/width_civ_details"
                    android:layout_height="@dimen/height_civ_details"
                    android:layout_marginStart="@dimen/margin_st_civ_details"
                    android:layout_marginTop="@dimen/margin_top_civ_details"
                    android:elevation="@dimen/elev_civ_details"
                    android:src="@color/cardview_light_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_st_name_details"
                    android:layout_marginTop="@dimen/margin_top_name_details"
                    android:text="@string/details_name_ph"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txtsize_name_details"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/details_pic"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/details_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_st_email_details"
                    android:text="@string/details_email_ph"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toEndOf="@+id/details_pic"
                    app:layout_constraintTop_toBottomOf="@+id/details_name" />

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_st_ic_location_details"
                    android:layout_marginTop="@dimen/margin_top_ic_location_details"
                    android:src="@drawable/ic_location_on"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_pic" />

                <TextView
                    android:id="@+id/details_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_st_location_details"
                    android:layout_marginTop="@dimen/margin_top_location_details"
                    android:text="@string/details_location_ph"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toEndOf="@+id/location_icon"
                    app:layout_constraintTop_toBottomOf="@+id/details_pic" />

                <ImageView
                    android:id="@+id/work_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_st_ic_work_details"
                    android:layout_marginTop="@dimen/margin_top_ic_work_details"
                    android:src="@drawable/ic_work"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_icon" />

                <TextView
                    android:id="@+id/details_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_st_profession_details"
                    android:layout_marginTop="@dimen/margin_top_profession_details"
                    android:text="@string/details_profession_ph"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toEndOf="@+id/work_icon"
                    app:layout_constraintTop_toBottomOf="@+id/details_location" />
            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/details_lower_section" />
    </LinearLayout>

    <include layout="@layout/error_layout" />

    <ProgressBar
        android:id="@+id/details_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>